Return the old java version, Changed ProfileParseException message